--- a/src/index.css
+++ b/src/index.css
@@ -67,13 +67,15 @@ button:focus-visible {
   }
 }
 
-.editor-container:empty::before {
+
+[data-placeholder]{
+  position: relative
+}
+
+[data-placeholder][data-empty]:before {
   content: attr(data-placeholder);
-  color: #ccc;
-  font-style: italic;
+  pointer-events: none;
+  opacity: 0.3;
   position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
+  inset: 0;
 }
