--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+@import './App.css';
+
 :root {
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
@@ -25,9 +27,6 @@ a:hover {
 body {
   margin: 0;
   display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
 }
 
 h1 {
@@ -66,7 +65,6 @@ button:focus-visible {
     background-color: #f9f9f9;
   }
 }
-
 
 [data-placeholder]{
   position: relative
