Update Editor component layout with additional padding and maximum height; add commented theme spacing variable in CSS for future use.

--- a/src/index.css
+++ b/src/index.css
@@ -103,3 +103,7 @@ p[data-placeholder][data-empty]:hover:before {
   /* background-color: red; */
   color: white;
 }
+/* 
+@theme{
+  --spacing-xxl: 500px;
+} */
