--- a/src/index.css
+++ b/src/index.css
@@ -86,7 +86,7 @@ p[data-placeholder][data-empty]:hover:before {
   inset: 0;
 }
 
-.slash-placeholder::before{
+/* .slash-placeholder::before{
   content: attr(data-placeholder);
   pointer-events: none;
   opacity: 0.3;
@@ -100,10 +100,6 @@ p[data-placeholder][data-empty]:hover:before {
 
 .slash-placeholder{
   position: relative;
-  /* background-color: red; */
   color: white;
-}
-/* 
-@theme{
-  --spacing-xxl: 500px;
 } */
+/* 
