--- a/src/index.css
+++ b/src/index.css
@@ -123,3 +123,9 @@ ul > li{
   list-style-position: inside;
   list-style-type: disc;
 }
+
+blockquote{
+  border-left: 4px solid #ccc;
+  padding-left: 16px;
+  margin-left: 16px;
+}
